# django-stepik

./: README.md  db.sqlite3  pyproject.toml
django_stepik/: settings.py  urls.py
